editing 3.0.0 total fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remote-helper-hire",
+  "name": "affiliate-03",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://RemoteHelpers.github.io/affiliate-03",
