final fixes, swiper embed

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-easy-marquee": "^1.2.4",
     "react-gtm-module": "^2.0.11",
     "react-loader-spinner": "^5.1.5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
